# voronoiq

./: API_principal.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: test_voronoiq.py
voronoiq/: __init__.py  diagram.py  generators.py  metrics.py  region.py
voronoiq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
